--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <body>
     <div id="map"></div>
     <script>
-        mapboxgl.accessToken = 'YOUR_MAPBOX_TOKEN_HERE';
+        mapboxgl.accessToken = 'pk.eyJ1IjoiYnVuZHlrMTIiLCJhIjoiY21oY2NuZWMwMjEycDJucTMyM3B6dXJxZyJ9.eaWSaIsHytWE8odV_Lnhmg';
         
         const map = new mapboxgl.Map({
             container: 'map',
