--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
     <script>
          // Configuration
         mapboxgl.accessToken = 'pk.eyJ1IjoiYnVuZHlrMTIiLCJhIjoiY21oY2NuZWMwMjEycDJucTMyM3B6dXJxZyJ9.eaWSaIsHytWE8odV_Lnhmg';
-        const DATA_URL = 'https://bundyk12.github.io/ppm-property-map/property-data.json';
+        const DATA_URL = 'https://t24d-bundyk12.github.io/ppm-property-map/property-data.json';
         
         // DOM elements
         const statusDiv = document.getElementById('status');
