--- a/index.html
+++ b/index.html
@@ -171,10 +171,16 @@
         function createPopupContent(property) {
             const { status } = getPropertyColor(property);
             const propertyName = property.address || property.id || 'Unknown Property';
+
+             if (property.maintenance?.earliest_pickup_date !== '') {
+                const pickup_date = new Date(property.maintenance?.earliest_pickup_date);
+                const options = { year: 'numeric', month: 'long', day: 'numeric' };
+                const formatted_pickup_date = pickup_date.toLocaleDateString('en-US', options);
+            };
             
             let taskList = '<ul style="margin: 5px 0; padding-left: 20px; font-size: 12px;">';
             if (property.maintenance?.lockbox_pickup === 'Yes') taskList += '<li>🔴 Lockbox Pickup</li>';
-            if (property.maintenance?.earliest_pickup_date !== '') taskList += '<li>Earliest Pickup Date: ' + new Date(property.maintenance?.earliest_pickup_date).toLocaleDateString('en-US', (month: 'long', day: 'numeric', year: 'numeric')) + '</li>';
+            if (property.maintenance?.earliest_pickup_date !== '') taskList += '<li>Earliest Pickup Date: ' + formatted_pickup_date + '</li>';
             if (property.maintenance?.exterior_photos === 'Yes') taskList += '<li>🟡 Exterior Photos</li>';
             if (property.maintenance?.eyes_on_property === 'Yes') taskList += '<li>🔵 Eyes-On Property</li>';
             if (property.maintenance?.banner_pickup === 'Yes') taskList += '<li>🟢 Banner/Sign Removal</li>';
