--- a/index.html
+++ b/index.html
@@ -219,8 +219,7 @@
             
             return `
                 <div style="font-size: 13px; max-width: 250px;">
-                    <strong style="color: #333;">Property ${property.id}</strong><br>
-                    <span style="color: #666; font-size: 11px;">${property.address}</span><br>
+                    <strong style="color: #333; font-size: 11px;">${property.address}</strong><br>
                     ${taskList}
                 </div>
             `;
