--- a/index.html
+++ b/index.html
@@ -31,11 +31,11 @@
         
         .legend {
             position: absolute; 
-            bottom: 30px; 
+            bottom: 30px;
             left: 10px; 
             z-index: 500;
             background: white; 
-            padding: 15px; 
+            padding: 25px 15px 15px 15px; 
             border-radius: 8px; 
             box-shadow: 0 4px 15px rgba(0,0,0,0.15); 
             font-size: 13px;
