--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
             left: 10px; 
             z-index: 500;
             background: white; 
-            padding: 25px 15px 15px 15px; 
+            padding: 15px; 
             border-radius: 8px; 
             box-shadow: 0 4px 15px rgba(0,0,0,0.15); 
             font-size: 13px;
@@ -91,7 +91,7 @@
             right: 10px; 
             z-index: 1000;
             background: white; 
-            padding: 10px 15px; 
+            padding: 15px; 
             border-radius: 6px; 
             font-size: 12px;
             box-shadow: 0 2px 8px rgba(0,0,0,0.1);
